--- a/Payroll_Management_System/Management/templates/Management/greet.html
+++ b/Payroll_Management_System/Management/templates/Management/greet.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Greet</title>
-</head>
-<body>
+{% extends "Management/Layout.html" %}
+
+{% block title %} Greet, {{name}} {% endblock title %}
+
+{% block body %}
     <h1>Hello, {{ name }}! </h1>
-</body>
-</html>
+{% endblock %}
