--- a/Payroll_Management_System/Management/templates/Management/index.html
+++ b/Payroll_Management_System/Management/templates/Management/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hello!!!</title>
-</head>
-<body>
+{% extends "Management/Layout.html" %}
+
+{% block title %} Hello World {% endblock title %}
+
+{% block body %}
     <h1>Hello World!!</h1>
-</body>
-</html>
+    {% if newyear %}
+        <h1>Yes</h1>
+    {% else %}
+        <h1>No</h1>
+    {% endif %}
+{% endblock %}
