--- a/Payroll_Management_System/Management/templates/Management/Fav.html
+++ b/Payroll_Management_System/Management/templates/Management/Fav.html
@@ -11,5 +11,5 @@
             <p>No Such Favorites</p>
         {% endfor %}
     </ul>
-    <a href="{% url 'Management:Add' %}">Add a New Task</a>
+    <a href="{% url 'Management:AddFav' %}">Add a New Task</a>
 {% endblock body %}
