Table Allign Error Solved

--- a/Payroll_Management_System/Management/templates/Management/Layout.html
+++ b/Payroll_Management_System/Management/templates/Management/Layout.html
@@ -49,6 +49,10 @@
                   {% block body %}
                   {% endblock body %}
                </div>
+               <div class="repoContainer">
+                  {% block sec_body %}
+                  {% endblock sec_body %}
+               </div>
             </div>
          </div>
       </div>
