--- a/Payroll_Management_System/Management/templates/Management/add_complaint.html
+++ b/Payroll_Management_System/Management/templates/Management/add_complaint.html
@@ -11,7 +11,7 @@
     {{ form }}
     <input type="submit">
 </form>
-<div class="container">
-    <a href="{% url 'Management:complaint' %}">View all complaints</a>
 </div>
+<div class="repoContainer">
+    <a href="{% url 'Management:complaint' %}">View all complaints</a>
 {% endblock body%}
