Table Scrollbar Added

--- a/Payroll_Management_System/Management/templates/Management/complaint.html
+++ b/Payroll_Management_System/Management/templates/Management/complaint.html
@@ -7,7 +7,7 @@
 {% block body %}
 <h1>All Complaints</h1>
 </div>
-<div class="repoContainer">
+<div class="repoContainer" style="overflow-y: hidden;">
     <table id="code" style="position: relative; margin-right: 30px; padding: 15px;border-spacing:30px;">
         <tr>
             <th>Name</th>
