Some Tweaks In Frontend

--- a/Payroll_Management_System/Management/templates/Management/complaint.html
+++ b/Payroll_Management_System/Management/templates/Management/complaint.html
@@ -25,7 +25,7 @@
             <td>{{Comp.4}}</td>
         </tr>
         {% empty %}
-            <td colspan="5">No Complaint</td>
+            <td colspan="5" style="text-align: center; color: aqua;">No Complaint</td>
         {% endfor %}
     </table>
 {% endblock body%}
