--- a/Payroll_Management_System/Management/templates/Management/index.html
+++ b/Payroll_Management_System/Management/templates/Management/index.html
@@ -5,7 +5,7 @@
 
 
 {% block body %}
-<a href="#" class="repoCard" target="_blank" rel="noopener noreferrer">
+<a href="/admin/" class="repoCard" target="_blank" rel="noopener noreferrer">
    <div class="repoTitle">Login</div>
    <p>Login for Admins</p>
    <div><span>Login</span><span>Admin</span></div>
