--- a/Payroll_Management_System/Management/templates/Management/Layout.html
+++ b/Payroll_Management_System/Management/templates/Management/Layout.html
@@ -18,7 +18,7 @@
          <div class="container">
             <div class="sidebar user">
                <div>
-                  <a href="{% url 'Management:Index' %}">
+                  <a href="{% url 'Management:Home' %}">
                      <div class="avatar shine">
                         <img src="https://res.cloudinary.com/garvitjoshi9/image/upload/v1594407409/Git-Hub/1_4_ebmyhb.jpg" class="profile" alt="">
                      </div>
