Few Changes in views and HTML files

--- a/Payroll_Management_System/Management/templates/Management/Fav.html
+++ b/Payroll_Management_System/Management/templates/Management/Fav.html
@@ -5,8 +5,8 @@
 {% block body %}
 <h1>Favorites</h1>
     <ul>
-        {% for Fav in Favorites %}
-            <li>{{ Fav }}</li>
+        {% for fav in favorites %}
+            <li>{{ fav }}</li>
             {% empty %}
             <p>No Such Favorites</p>
         {% endfor %}
