--- a/Payroll_Management_System/Management/templates/Management/Layout.html
+++ b/Payroll_Management_System/Management/templates/Management/Layout.html
@@ -20,7 +20,7 @@
                <div>
                   <a href="{% url 'Management:Home' %}">
                      <div class="avatar shine">
-                        <img src="https://res.cloudinary.com/garvitjoshi9/image/upload/v1594407409/Git-Hub/1_4_ebmyhb.jpg" class="profile" alt="">
+                        <img src="https://res.cloudinary.com/garvitjoshi9/image/upload/v1594407409/Git-Hub/1_4_ebmyhb.jpg" class="profile" alt="Company Picture">
                      </div>
                   </a>
                   <h1>Payroll Management System</h1>
@@ -29,18 +29,18 @@
                <div>
                   <h3>Favorites:</h3>
                   <div class="skills">
-                     {% for Fav in Favorites %}
-                     <span>{{ Fav }}</span>
+                     {% for fav in favorites %}
+                     <span>{{ fav }}</span>
                      {% empty %}
                      <p>No Such Favorites</p>
                      {% endfor %}
                   </div>
                </div>
                <div class="details">
-                  <h3>About Devloper:</h3>
+                  <h3>About Developer:</h3>
                   <div><i class="fab fa-github-alt"></i><a href="https://github.com/garvit-joshi" target="_blank" rel="noopener noreferrer" style="color: inherit;">@garvit-joshi</a></div>
-                  <div><i class="fas fa-building"></i>Lovely Professional University</div>
-                  <div><i class="fas fa-map-marker-alt"></i>Phagwara, Punjab</div>
+                  <div><i class="fas fa-building"></i><a href="https://www.lpu.in/" target="_blank" rel="noopener noreferrer" style="color: inherit;">Lovely Professional University</a></div>
+                  <div><i class="fas fa-map-marker-alt"></i><a href="https://www.google.com/search?q=Phagwara+Punjab" target="_blank" rel="noopener noreferrer" style="color: inherit;">Phagwara, Punjab</a></div>
                </div>
             </div>
             <div class="main">
