Updated HTML File Names

--- a/Payroll_Management_System/Management/templates/Management/add_favourite.html
+++ b/Payroll_Management_System/Management/templates/Management/add_favourite.html
@@ -1,6 +1,6 @@
 {% extends "Management/layout.html" %}
 
-{% block title %} Add Favorites {% endblock title %}
+{% block title %} Add Favourites {% endblock title %}
 
 {% block body %}
     <h1>Add Favorites</h1>
