Bug Fix1: Alignment Issue

--- a/Payroll_Management_System/Management/templates/Management/search.html
+++ b/Payroll_Management_System/Management/templates/Management/search.html
@@ -5,7 +5,11 @@
 
 
 {% block body %}
-<h1>Search an Employee</h1>
+{% if method == "GET" %}
+    <h1>Search an Employee</h1>
+{% else %}
+    <h1>Results</h1>
+{% endif %}
 <form action="{% url 'Management:Search' %}" method="POST">
     {% csrf_token %}
     {{ form }}
@@ -16,8 +20,25 @@
     {% if not result and method == "POST" %}
         <p>No Result Found</p>
     {% elif method == "GET" %}
-        <p>GET REQUEST</p>
+        <p></p>
     {% else %}
-        <p>POST REQUEST- Found</p>
+        <table id="code" style="position: relative; margin-right: 30px; padding: 15px;border-spacing:30px;">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Position</th>
+            </tr>
+            {% for r in result %}
+                <tr>
+                    <td>{{ r.id }}</td>
+                    <td>{{ r.Name }}</td>
+                    <td>{{ r.Email }}</td>
+                    <td>{{ r.Position }}</td>
+                </tr>
+            {% empty %}
+                <td colspan="5" style="text-align: center; color: aqua;">No Result</td>
+            {% endfor %}
+        </table>
     {% endif %}
 {% endblock body%}
