--- a/Payroll_Management_System/Management/templates/Management/index.html
+++ b/Payroll_Management_System/Management/templates/Management/index.html
@@ -11,17 +11,17 @@
    <p>Login for Admins</p>
    <div><span>Login</span><span>Admin</span></div>
 </a>
-<a href="#" class="repoCard" target="_blank" rel="noopener noreferrer">
+<a href="#" class="repoCard" rel="noopener noreferrer">
     <div class="repoTitle">Signup for Employee</div>
     <p>Employee Register Here!!</p>
     <div><span>Login</span><span>Employee</span></div>
 </a>
-<a href="#" class="repoCard" target="_blank" rel="noopener noreferrer">
+<a href="#" class="repoCard" rel="noopener noreferrer">
     <div class="repoTitle">Login for Employee</div>
     <p>Employee Login Here</p>
     <div><span>Login</span><span>Employee</span></div>
 </a>
-<a href="{% url 'Management:Add_Complaint' %}" class="repoCard" target="_blank" rel="noopener noreferrer">
+<a href="{% url 'Management:Add_Complaint' %}" class="repoCard" rel="noopener noreferrer">
    <div class="repoTitle">Report a complaint</div>
    <p>Bug Reports, Complaint Filing System</p>
    <div><span>Form</span><span>Bugs</span></div>
