--- a/Payroll_Management_System/Management/templates/Management/layout.html
+++ b/Payroll_Management_System/Management/templates/Management/layout.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
       <title>
         {% block title %}
-        {{ page_title|default:"Untitled Page" }}
+        {{ page_title|default:"Payroll Management System" }}
         {% endblock title %}
     </title>
       <link href="{% static 'Management/styles.css' %}" rel="stylesheet">
