--- a/Payroll_Management_System/Management/templates/Management/index.html
+++ b/Payroll_Management_System/Management/templates/Management/index.html
@@ -11,14 +11,9 @@
    <p>Login for Admins</p>
    <div><span>Login</span><span>Admin</span></div>
 </a>
-<a href="#" class="repoCard" rel="noopener noreferrer">
+<a href="{% url 'Management:Sign_Up' %}" class="repoCard" rel="noopener noreferrer">
     <div class="repoTitle">Signup for Employee</div>
     <p>Employee Register Here!!</p>
-    <div><span>Login</span><span>Employee</span></div>
-</a>
-<a href="#" class="repoCard" rel="noopener noreferrer">
-    <div class="repoTitle">Login for Employee</div>
-    <p>Employee Login Here</p>
     <div><span>Login</span><span>Employee</span></div>
 </a>
 <a href="{% url 'Management:Add_Complaint' %}" class="repoCard" rel="noopener noreferrer">
